--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ black = "^24.3.0"
 isort = "^5.13.2"
 mypy = "^1.9.0"
 django-stubs = "^4.2.7"
+django-debug-toolbar = "^4.3.0"
 
 [build-system]
 requires = ["poetry-core"]
