--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 django = "^5.0.3"
 django-environ = "^0.11.2"
 djangorestframework = "^3.15.1"
+django-debug-toolbar = "^4.3.0"
+django-extensions = "^3.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -17,7 +19,7 @@ black = "^24.3.0"
 isort = "^5.13.2"
 mypy = "^1.9.0"
 django-stubs = "^4.2.7"
-django-debug-toolbar = "^4.3.0"
+ipython = "^8.22.2"
 
 [build-system]
 requires = ["poetry-core"]
