--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ django-environ = "^0.11.2"
 djangorestframework = "^3.15.1"
 django-debug-toolbar = "^4.3.0"
 django-extensions = "^3.2.3"
+mysqlclient = "^2.2.4"
 
 
 [tool.poetry.group.dev.dependencies]
