--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.15.1"
 django-debug-toolbar = "^4.3.0"
 django-extensions = "^3.2.3"
 mysqlclient = "^2.2.4"
+drf-spectacular = "^0.27.1"
 
 
 [tool.poetry.group.dev.dependencies]
