--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ django-debug-toolbar = "^4.3.0"
 django-extensions = "^3.2.3"
 mysqlclient = "^2.2.4"
 drf-spectacular = "^0.27.1"
+gunicorn = "^21.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
