--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ mysqlclient = "^2.2.4"
 drf-spectacular = "^0.27.1"
 gunicorn = "^21.2.0"
 dj-rest-auth = "^5.1.0"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
