--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ drf-spectacular = "^0.27.1"
 gunicorn = "^21.2.0"
 dj-rest-auth = "^5.1.0"
 djangorestframework-simplejwt = "^5.3.1"
+django-allauth = "^0.61.1"
 
 
 [tool.poetry.group.dev.dependencies]
