--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,9 @@ drf-spectacular = "^0.27.2"
 dj-rest-auth = "^5.1.0"
 djangorestframework-simplejwt = "^5.3.1"
 django-allauth = "^0.61.1"
+boto3 = "^1.34.76"
+pillow = "^10.3.0"
+django-storages = "^1.14.2"
 
 
 [tool.poetry.group.dev.dependencies]
