--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ django-allauth = "^0.61.1"
 boto3 = "^1.34.76"
 pillow = "^10.3.0"
 django-storages = "^1.14.2"
+djangorestframework-stubs = "^3.14.5"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -28,6 +29,7 @@ isort = "^5.13.2"
 mypy = "^1.9.0"
 django-stubs = "^4.2.7"
 ipython = "^8.23.0"
+django-stubs-ext = "^4.2.7"
 
 [build-system]
 requires = ["poetry-core"]
