Chore: update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    image: ysolarh/backend:latest
     container_name: backend
     env_file:
       - ./backend/.env
