--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "eslintConfig": {
     "extends": [
