--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 db/
+*.png
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,visualstudiocode,vim,python,react,django,venv,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,visualstudiocode,vim,python,react,django,venv,macos,windows
