Chore: add coverage omit to pyproject.toml

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -59,3 +59,6 @@ ignore_errors = true
 
 [tool.django-stubs]
 django_settings_module = "mysite.settings"
+
+[tool.coverage.run]
+omit = ["*/migrations/*"]
