--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ boto3 = "^1.34.76"
 pillow = "^10.3.0"
 django-storages = "^1.14.2"
 djangorestframework-stubs = "^3.14.5"
+django-cors-headers = "^4.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
