--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,3 +1,7 @@
 [build]
 publish = "build"
 command = "yarn build"
+
+[context.production.environment]
+  TOML_ENV_VAR = "From netlify.toml"
+  REACT_APP_TOML_ENV_VAR = "From netlify.toml (REACT_APP_)"
