--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ pillow = "^10.3.0"
 django-storages = "^1.14.2"
 djangorestframework-stubs = "^3.14.5"
 django-cors-headers = "^4.3.1"
+django-cleanup = "^8.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
